Move logic to turn off caret blinking for LayoutTests to LayoutTheme.

LayoutThemeMac extends LayoutTheme directly, whereas other themes
such as LayoutTheme{Win,Linux} extend LayoutThemeDefault. The logic
to turn off caret blinking in LayoutTests was placed in
LayoutThemeDefault::caretBlinkInterval() and so was ineffective on Mac.

BUG=667403

Review-Url: https://codereview.chromium.org/2525513002
Cr-Commit-Position: refs/heads/master@{#433780}

Former-commit-id: 0210f10d9f5ac5b1f47f374a31dc8f70f33e5539